# fleet_control_etl

./: .gitignore  README.md  cfe.csv  etl.csv  example_data.csv  final.csv  final_etl.csv  nfe.csv  pyproject.toml  transformed_cfe_data.csv  transformed_data.csv
cupons_xml/: AD35250431250374000199590010340389106100026741.xml  AD35250431250374000199590010340389112097659984.xml  AD35250431250374000199590010340389122338359115.xml  AD35250431250374000199590010340389125040643630.xml  AD35250431250374000199590010340389125062018534.xml  AD35250431250374000199590010340389153112192465.xml  AD35250431250374000199590010340389158998477108.xml  AD35250431250374000199590010340389159768824785.xml  AD35250431250374000199590010340389174984418637.xml  AD35250431250374000199590010340389186717670389.xml  AD35250431250374000199590010340389211785480152.xml  AD35250431250374000199590010340389227295345719.xml  AD35250431250374000199590010340389229529130760.xml  AD35250431250374000199590010340389265564109426.xml  AD35250431250374000199590010340389266678850050.xml  AD35250431250374000199590010340389278672124327.xml  AD35250431250374000199590010340389287362524431.xml  AD35250431250374000199590010340389295008516057.xml  AD35250431250374000199590010340389323540702683.xml  AD35250431250374000199590010340389324044457445.xml  AD35250431250374000199590010340389325652917513.xml  AD35250453027959000187590010340304624853020032.xml  AD35250453027959000187590010340304629639906956.xml  AD35250453027959000187590010340304675252818042.xml  AD35250453027959000187590010340304712543428486.xml  (+24 more)
notas_xml/: test.xml  (+7 more)
(+35 files in other folders)
