[project]
name = "auto-fleet-control"
version = "0.1.0"
description = ""
authors = [
    {name = "hguazza",email = "144302319+hguazza@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "auto_fleet_control", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
